feat:express #6 update checkIdExists to checkAlreadyExists
