# munetic_express/src/routes/auth.routes.ts
@@ -6,3 +6,4 @@ export const router = Router();
 
 router.post('/login', Auth.login);
 router.post('/signup', Auth.signup);
+router.get('/signup/user', Auth.isValidInfo);
